--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = ">=3.10,<3.11"
 hikari-crescent = "^0.3.5"
 tomli = "^2.0.1"
 goslate = "^1.5.4"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 
