--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ hikari-crescent = "^0.3.5"
 tomli = "^2.0.1"
 goslate = "^1.5.4"
 requests = "^2.28.1"
+argostranslate = "^1.7.5"
 
 [tool.poetry.dev-dependencies]
 
