--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ argostranslate = "^1.7.5"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.group.dev.dependencies]
+black = "^22.12.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
