--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ argostranslate = "^1.7.5"
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
 
+[tool.black]
+line-length = 99
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
