--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ tomli = "^2.0.1"
 goslate = "^1.5.4"
 requests = "^2.28.1"
 argostranslate = "^1.7.5"
+hikari-miru = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 
