--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Alex The JPEG <alexthejpeg@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-hikari-crescent = "^0.4.0"
+hikari-lightbulb = "^2.3.1"
 hikari-miru = "^2.0.1"
 requests = "^2.28.1"
 argostranslate = "^1.7.5"
