--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = ">=3.11,<3.12"
 hikari-lightbulb = "^2.3.1"
 hikari-miru = "^2.0.1"
 requests = "^2.28.1"
-argostranslate = "^1.7.5"
+libretranslatepy = "^2.1.3"
 
 [tool.poetry.dev-dependencies]
 
