--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ black = "^22.12.0"
 
 [tool.black]
 line-length = 99
+experimental-string-processing = true
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
