--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ hikari-lightbulb = "^2.3.1"
 hikari-miru = "^2.0.1"
 requests = "^2.28.1"
 libretranslatepy = "^2.1.3"
+pillow = "^9.4.0"
 
 [tool.poetry.dev-dependencies]
 
