--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ hikari-miru = "^2.0.1"
 requests = "^2.28.1"
 libretranslatepy = "^2.1.3"
 pillow = "^9.4.0"
+gazpacho = "^1.1"
 
 [tool.poetry.dev-dependencies]
 
