--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ black = "^22.12.0"
 
 [tool.black]
 line-length = 99
-experimental-string-processing = true
+preview = true
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
