--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.28.1"
 libretranslatepy = "^2.1.3"
 pillow = "^9.4.0"
 gazpacho = "^1.1"
+beautifulsoup4 = "^4.11.1"
 
 [tool.poetry.dev-dependencies]
 
