--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,17 @@ libretranslatepy = "^2.1.3"
 pillow = "^9.4.0"
 beautifulsoup4 = "^4.11.1"
 
-[tool.poetry.dev-dependencies]
-
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
+ruff = "^0.0.236"
 
 [tool.black]
 line-length = 99
 preview = true
+
+[tool.ruff]
+line-length = 99
+target-version = "py311"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
