--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,15 @@ beautifulsoup4 = "^4.11.1"
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
 ruff = "^0.0.236"
+isort = "^5.11.4"
 
 [tool.black]
 line-length = 99
 preview = true
 
 [tool.ruff]
+select = ["E", "F", "C", "I", "ANN", "B", "C4", "SIM", "PTH"]
+ignore = ["ANN002", "ANN003", "ANN101"]
 line-length = 99
 target-version = "py311"
 
